--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,11 +1,15 @@
 pipeline {
-   agent { docker { image 'mcr.microsoft.com/playwright:focal' } }
-   stages {
-      stage('e2e-tests') {
-         steps {
-            bat 'npm install'
-            bat 'npm run test'
-         }
-      }
-   }
+    agent any
+    stages {
+        stage('Many tests') {
+            agent {
+                docker {
+                    image 'mcr.microsoft.com/playwright:v1.17.1'
+                }
+            }
+            steps {
+                sh 'npx playwright test'
+            }
+        }
+    }
 }
