--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
                 }
             }
             steps {
-                sh 'npx playwright test'
+                bat 'npx playwright test'
             }
         }
     }
